# AgenticAgentAgenting

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  api_models.py  main.py  models.py  settings.py  store.py
backend/app/orchestration/: langgraph_graph.py  ring_graph.py  scheduler.py  skill_registry.py  specialist_engine.py
backend/scripts/: cors_post_smoke.py  decision_ledger_smoke.py  skill_recommendation_smoke.py  smoke_run.py  ui_runtime_artwork_test_matrix.py
backend/tests/: test_cors.py  test_frontend_artwork_assets.py  test_goal_run_api.py  test_health.py  test_openapi_contract.py  test_persistent_store.py  test_runtime_status.py  test_scheduler.py  test_skill_registry.py
docs/: alpha-competitive-analysis.md  hive-agent-system-plan.md  web-research-similar-projects.md
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: hive-shell.tsx
frontend/src/lib/: api.ts
frontend/src/types/: hive.ts
frontend/tests/: hive-ui.spec.ts  visual-qa.spec.ts
